# aio2025-course-projects

./: .gitignore  README.md  factorial-calculation-app.py  pyproject.toml  rag-app.py  rag-chat-app.py  requirements.txt  score-analysis-app.py  scores.xlsx  users.txt
.devcontainer/: devcontainer.json
module-1/project-1.1-streamlit/: README.md  app.py  pyproject.toml  score_analysis.py
module-1/project-1.1-streamlit/src/: __init__.py  footer.py
module-1/project-1.2-rag-chatbot/: README.md  pyproject.toml
module-1/project-1.2-rag-chatbot-backup/: README.md  app.py
module-1/project-1.2-rag-chatbot-backup/src/: document_processor.py  vector_store.py
module-1/project-1.2-rag-chatbot/src/: __init__.py  chatbot.py  rag_app.py
module-2/project-2.1/: README.md  pyproject.toml
module-2/project-2.2/: README.md  pyproject.toml
module-3/project-3.1/: README.md  app.py  pyproject.toml  test.ipynb
module-3/project-3.1/src/: __init__.py
module-3/project-3.2/: pyproject.toml
module-3/project-3.2-heart-disease-diagnosis/: README.md  requirements.txt
module-3/project-3.2-heart-disease-diagnosis/notebooks/: Ensemble_Diagnosis.ipynb  Feature_Engineering.ipynb  Naive_Bayes_Classifier_Diagnosis.ipynb  [Hint]_Ensemble_Diagnosis.ipynb  [Hint]_Feature_Engineering.ipynb  [Hint]_Naive_Bayes_Classifier_Diagnosis.ipynb
module-4/project-4.1/: README.md  pyproject.toml
module-4/project-4.2/: README.md  pyproject.toml
module-4/project-4.2-Heart-Disease-Diagnosis/: README.md  requirements.txt
module-4/project-4.2-Heart-Disease-Diagnosis/notebooks/: 01-Data-Cleaning-and-EDA.ipynb  Feature_Engineering.ipynb
module-4/project-4.2-Retail-Forecasting/: README.md  pyproject.toml  requirements.txt
module-4/project-4.2-Retail-Forecasting/baseline/: app.py
module-4/project-4.2-Retail-Forecasting/baseline/notebooks/: Boosting_Diagnosis.ipynb  Random_Forest_Diagnosis.ipynb
module-4/project-4.2-Retail-Forecasting/data/processed/: data_stockcode_grouped.csv
module-4/project-4.2-Retail-Forecasting/notebooks/: 01-Data-Cleaning-and-EDA.ipynb  03-Feature-Engineering.ipynb  04-Modeling.ipynb  05-XAI-Explainable-AI.ipynb
module-4/project-4.2-Retail-Forecasting/src/utils/: plots.py
