[project]
name = "aio2025-course-projects"
version = "0.1.0"
description = "Course projects for AIO-2025 at AI VIET NAM"
authors = [
    {name = "Dang Le", email = "lehaidang2601@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]
