[project]
name = "rag-chatbot"
version = "0.1.0"
description = "RAG Chatbot built with LangChain for PDF document processing"
authors = [
    {name = "Dang Le", email = "lehaidang2601@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "langchain>=0.1.0",
    "langchain-community>=0.0.10",
    "streamlit>=1.28.0",
    "pypdf>=3.17.0",
    "faiss-cpu>=1.7.4",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]
