[project]
name = "rag-chatbot"
version = "0.1.0"
description = "RAG Chatbot built with LangChain for PDF document processing"
authors = [
    {name = "Dang Le", email = "lehaidang2601@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "streamlit>=1.28.0",
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "langchain>=0.1.0",
    "langchain-community>=0.0.10",
    "langchain-huggingface>=0.0.1",
    "langchain-experimental>=0.0.40",
    "langchain-chroma>=0.1.0",
    "langchain-core>=0.1.0",
    "chromadb>=0.4.0",
    "accelerate>=0.20.0",
    "bitsandbytes>=0.41.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]
